--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "express": "^4.17.1",
     "ip": "^1.1.5"
   },
-  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "sudo node server.js",
+    "dev": "npm run development",
+    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch": "npm run development -- --watch",
+    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "prod": "npm run production",
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -23,5 +28,15 @@
   "bugs": {
     "url": "https://github.com/flexnst/dns-proxy/issues"
   },
-  "homepage": "https://github.com/flexnst/dns-proxy#readme"
+  "homepage": "https://github.com/flexnst/dns-proxy#readme",
+  "devDependencies": {
+    "axios": "^0.20.0",
+    "cross-env": "^7.0.2",
+    "laravel-mix": "^5.0.5",
+    "resolve-url-loader": "^3.1.0",
+    "sass": "^1.26.11",
+    "sass-loader": "^8.0.2",
+    "vue": "^2.6.12",
+    "vue-template-compiler": "^2.6.12"
+  }
 }
