--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "axios": "^0.20.0",
     "cross-env": "^7.0.2",
     "laravel-mix": "^5.0.5",
+    "material-icons": "^0.3.1",
+    "materialize-css": "^1.0.0-rc.2",
+    "npm": "^6.14.8",
     "resolve-url-loader": "^3.1.0",
     "sass": "^1.26.11",
     "sass-loader": "^8.0.2",
